Prueba de nodejs

--- a/Ejercicio_1/package.json
+++ b/Ejercicio_1/package.json
@@ -1,7 +1,7 @@
 {
   "name": "operadores_apropiacion_js",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "Ejercicio_1.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
